# pupae_thermal_device

./: .gitignore  README.md
images/: buttons_figure.odp  buttons_figure.xcf
mechanics/: feather_tripler_enclosure.FCStd  peltier_side_plate.FCStd  peltier_stack_jig.FCStd  power_connector_mount.FCStd  pupae_thermal_device_cover.FCStd  pupae_thermal_device_frame.FCStd  pupae_thermal_device_frame_v2.FCStd  (+1 more)
software/pupae-thermal-device/: pyproject.toml
software/pupae-thermal-device/example/: closedloop_data.txt  closedloop_data_p040_i020.pkl  closedloop_data_p060_i010.pkl  closedloop_data_p100_i005.pkl  closedloop_test.py  openloop_data_offset_20.txt  openloop_data_offset_50.txt  openloop_test.py  plot_closedloop_data.py  plot_openloop_data.py  test.py
software/pupae-thermal-device/src/pupae_thermal_device/: :w  __init__.py  constants.py  controller_parameters_widget.py  device_connection_dialog.py  device_information_dialog.py  mplcanvas.py  plot_settings_widget.py  pupae_thermal_device.py  pupae_thermal_device_tuner.py  status_info.py  system_values_widget.py  tuner_app_main.py  ui_controller_parameters_widget.py  ui_device_connection_dialog.py  ui_device_information_dialog.py  ui_plot_settings_widget.py  ui_status_info.py  ui_system_values_widget.py  ui_tuner_main_window.py  update_all_ui.py
software/pupae-thermal-device/src/pupae_thermal_device/ui/: controller_parameters_widget.ui  device_connection_dialog.ui  device_information_dialog.ui  plot_settings_widget.ui  pupae_thermal_device_tuner.ui  status_info.ui  system_values_widget.ui  tuner_main_window.ui
(+36 files in other folders)
